Add header and start on logo

--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -80,8 +80,15 @@
 </head>
 
 <body class="wy-body-for-nav" role="document">
-
-  <div class="wy-grid-for-nav">
+  <div class="librato-header">
+    <img src="https://www.librato.com/images/librato-solarwind-logo.svg" class="logo"/>
+    <a href="">product</a>
+    <a href="">customers</a>
+    <a href="">pricing</a>
+    <a href="">developers</a>
+    <a href="">blog</a>
+   </div>
+    <div class="wy-grid-for-nav">
 
     {# SIDE NAV, TOGGLES ON MOBILE #}
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
