Add in signup and try it btn

--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -83,11 +83,13 @@
   <div class="librato-header">
     <img src="https://www.librato.com/images/librato-solarwind-logo.svg" class="logo"/>
     <div>
-      <a href="">product</a>
-      <a href="">customers</a>
-      <a href="">pricing</a>
-      <a href="">developers</a>
-      <a href="">blog</a>
+      <a href="#">product</a>
+      <a href="#">customers</a>
+      <a href="#">pricing</a>
+      <a href="#">developers</a>
+      <a href="#">blog</a>
+      <a href="#">sign in</a>
+      <a href="#">try it</a>
     </div>
    </div>
     <div class="wy-grid-for-nav">
