Tmp header position

--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -82,7 +82,7 @@
 <body class="wy-body-for-nav" role="document">
   <div class="librato-header">
     <img src="https://www.librato.com/images/librato-solarwind-logo.svg" class="logo"/>
-    <div>
+    <div class="header-menu">
       <a href="#">product</a>
       <a href="#">customers</a>
       <a href="#">pricing</a>
