Update header links

--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -84,13 +84,13 @@
     <img src="https://www.librato.com/images/librato-solarwind-logo.svg" class="logo"/>
     <div class="header-menu">
       <ul>
-        <li><a href="#">product</a></li>
-        <li><a href="#">customers</a></li>
-        <li><a href="#">pricing</a></li>
-        <li><a href="#">developers</a></li>
-        <li><a href="#">blog</a></li>
-        <li><a href="#" class="btn-librato-marketing">sign in</a></li>
-        <li><a href="#" class="btn-librato-marketing-yellow">try it</a></li>
+        <li><a href="https://www.librato.com/product">product</a></li>
+        <li><a href="https://www.librato.com/customers">customers</a></li>
+        <li><a href="https://www.librato.com/pricing">pricing</a></li>
+        <li><a href="http://dev.librato.com/v1">developers</a></li>
+        <li><a href="http://blog.librato.com/">blog</a></li>
+        <li><a href="https://metrics.librato.com/users/sign_in" class="btn-librato-marketing">sign in</a></li>
+        <li><a href="https://metrics.librato.com/sign_up" class="btn-librato-marketing-yellow">try it</a></li>
       </ul>
     </div>
    </div>
