--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -80,7 +80,7 @@
 </head>
 
 <body class="wy-body-for-nav" role="document">
-  <div class="librato-header">
+  <div id="mainheader" class="librato-header">
     <img src="https://www.librato.com/images/librato-solarwind-logo.svg" class="logo"/>
     <div class="header-menu">
       <ul>
@@ -97,7 +97,7 @@
     <div class="wy-grid-for-nav">
 
     {# SIDE NAV, TOGGLES ON MOBILE #}
-    <nav data-toggle="wy-nav-shift" class="wy-nav-side">
+    <nav id="navside" data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-scroll">
         <div class="wy-side-nav-search">
           {% block sidebartitle %}
