--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -81,7 +81,7 @@
 
 <body class="wy-body-for-nav" role="document">
   <div id="mainheader" class="librato-header">
-    <img src="https://www.librato.com/images/librato-solarwind-logo.svg" class="logo"/>
+    <img src="{{ pathto('_static/img/librato-solarwind-logo.svg', 1) }}" class="logo"/>
     <div class="header-menu">
       <ul>
         <li><a href="https://www.librato.com/product">product</a></li>
