--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -79,13 +79,13 @@
 
 <body class="wy-body-for-nav" role="document">
   <div id="mainheader" class="librato-header">
-    <img src="{{ pathto('_static/img/librato-solarwind-logo.svg', 1) }}" class="logo"/>
+    <a href="https://www.librato.com"><img src="{{ pathto('_static/img/librato-solarwind-logo.svg', 1) }}" class="logo"/></a>
     <div class="header-menu">
       <ul>
         <li><a href="https://www.librato.com/product">product</a></li>
         <li><a href="https://www.librato.com/customers">customers</a></li>
         <li><a href="https://www.librato.com/pricing">pricing</a></li>
-        <li ><a class="active" href="https://www.librato.com/docs/kb">developers</a></li>
+        <li ><a class="active" href="https://www.librato.com/docs/kb">documentation</a></li>
         <li><a href="http://blog.librato.com/">blog</a></li>
         <li><a href="https://metrics.librato.com/users/sign_in" class="btn-librato-marketing">sign in</a></li>
         <li><a href="https://metrics.librato.com/sign_up" class="btn-librato-marketing-yellow">try it</a></li>
