--- a/sphinx_rtd_theme/breadcrumbs.html
+++ b/sphinx_rtd_theme/breadcrumbs.html
@@ -8,9 +8,9 @@
 
 <div role="navigation" aria-label="breadcrumbs navigation">
   <ul class="wy-breadcrumbs">
-    <li><a href="{{ pathto(master_doc) }}">Docs</a> &raquo;</li>
+    <li><a href="{{ pathto(master_doc) }}">Docs</a> <img src="{{ pathto('_static/img/left-arrow.svg', 1) }}"></li>
       {% for doc in parents %}
-        <li><a href="{{ doc.link|e }}">{{ doc.title }}</a> &raquo;</li>
+        <li><a href="{{ doc.link|e }}">{{ doc.title }}</a> <img src="{{ pathto('_static/img/left-arrow.svg', 1) }}"></li>
       {% endfor %}
     <li>{{ title }}</li>
     <li class="wy-breadcrumbs-aside">
