Correct Links to documentation

--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -93,8 +93,8 @@
     </div>
     <div class="sub-nav"> 
       <ul>
-        <li class="active"><a class="active" href="#">Knowledge Base</a></li>
-        <li><a href="#">API Documentation</a></li>
+        <li class="active"><a class="active" href="https://www.librato.com/docs/kb/">Knowledge Base</a></li>
+        <li><a href="https://www.librato.com/docs/api/">API Documentation</a></li>
       </ul>
       <div class="search-box">
         {% include "searchbox.html" %}
